[package]
name = "casdoor-sdk-rust"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
description = "A Casdoor SDK (contain APIs) with more complete interfaces and better usability."
repository = "https://github.com/DMoscicki/casdoor-sdk-rust"
documentation = "https://docs.rs/casdoor-sdk-rust"
readme = "README.md"
homepage = "https://casdoor.org"
keywords = ["iam", "auth", "sso", "oidc", "casdoor"]
authors = ["Dmitrii Mastitckii <dimulgator@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9.3.0"
oauth2 = "5.0.0-rc.1"
toml = "0.8"
openssl = "0.10.68"
anyhow = "1.0.95"
rand = "0.8"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]