[package]
name = "casdoor-sdk-rust"
version = "1.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Casdoor SDK (contain APIs) with more complete interfaces and better usability."
repository = "https://github.com/DMoscicki/casdoor-sdk-rust"
documentation = "https://docs.rs/casdoor-sdk-rust"
readme = "README.md"
homepage = "https://casdoor.org"
keywords = ["iam", "auth", "sso", "oidc", "casdoor", "oauth2"]
authors = ["Dmitrii Mastitckii <dimulgator@outlook.com>"]

[dev-dependencies]
actix-web-httpauth = "0.8.2"
actix-web = { version = "4.9.0" }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9.3.0"
oauth2 = "5.0.0"
toml = "0.8"
openssl = "0.10"
anyhow = "1.0.95"
rand = "0.8"
chrono = "0.4.39"
thiserror = "2.0.11"
serde_with = { version = "3.12.0", features = ["chrono_0_4"] }

[dependencies.uuid]
version = "1.12.1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]